syntax = "proto3";

package cluster_pb;

option go_package = "github.com/memocash/index/ref/cluster/proto/cluster_pb";

service Cluster {
  rpc Ping (PingReq) returns (PingResp);
  rpc Process (ProcessReq) returns (ProcessResp);
}

message PingReq {
  uint64 nonce = 1;
}

message PingResp {
  uint64 nonce = 1;
}

message ProcessReq {
  bytes block = 1;
}

message ProcessResp {
}
